# python-fastapi

./: .gitignore  justfile
.devcontainer/: compose.yaml  devcontainer.json  initdb.sql
.devcontainer/features/claude-code/: devcontainer-feature.json
.devcontainer/features/just/: devcontainer-feature.json  install.sh
.devcontainer/features/uv/: devcontainer-feature.json  install.sh
.devconteiner/: devcontainer.json
.devconteiner/features/uv/: devcontainer-feature.json  install.sh
app/api/: alembic.ini  config.py  database.py  main.py  pyproject.toml
app/api/alembic/: env.py
app/api/alembic/versions/: 12824e5c484c_create_states_table.py  6a97e8f3dde0_create_initial_tables.py  ea788c0b8b4a_add_cities_table.py
app/api/crud/: city.py  country.py  state.py
app/api/domain/: exceptions.py
app/api/domain/validators/: __init__.py  city.py  country.py  state.py
app/api/models/: __init__.py  city.py  country.py  event_log.py  state.py
app/api/routers/: city.py  country.py  state.py  utils.py
app/api/schemas/: city.py  country.py  state.py
app/api/scripts/: check_db_connection.py  check_test_db_connection.py  db_inspect.py  fix_test_db_permissions.py  inspect_tables.py  reset_test_db.py  setup_main_schema.py
app/api/tests/: __init__.py  conftest.py
app/api/tests/factories/: __init__.py  city.py  country.py  state.py
app/api/tests/integration/: test_city_api.py  test_country_api.py  test_state_api.py
app/api/tests/unit/: test_country_crud.py  test_state_crud.py
scripts/: create_test_db.py
